fixed whitespace

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,4 +10,12 @@ body {
 		width: 100px;
 	}
 
+	input[type="text"] {
+		display: block;
+	}
+
+	input[name="zipcode"] {
+		display: block;
+	}
+
 }
